# spendability-pir

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  mise.toml  monitor.sh  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml  deploy.yml  release.yml
.mise/tasks/: clean
.mise/tasks/reset/: wallet-sync
.mise/tasks/start/: ios  server
combined-server/: Cargo.toml
combined-server/src/: main.rs  server.rs
combined-server/tests/: throughput_3tps.rs
docs/: Caddyfile  deploy-setup.md  pir-server.service  pir_wallet_integration.md  roman_notes.md  spend-server.service  witness_rebuild_strategy.md
hashtable-pir/: Cargo.toml
hashtable-pir/src/: lib.rs
nf-ingest/: Cargo.toml  build.rs
nf-ingest/src/: chain_tracker.rs  client.rs  ingest.rs  lib.rs  proto.rs
nf-ingest/tests/: ingest_to_hashtable.rs  mock_server.rs
note-witness/: README.md
nullifier/: README.md
nullifier/hashtable-pir/src/: lib.rs  snapshot.rs
nullifier/nf-ingest/: build.rs
nullifier/nf-ingest/src/: ingest.rs  lib.rs  parser.rs
nullifier/nf-ingest/tests/: ingest_to_hashtable.rs  mock_server.rs
nullifier/spend-client/: Cargo.toml
nullifier/spend-client/src/: lib.rs
nullifier/spend-client/tests/: end_to_end.rs  live_test.rs
nullifier/spend-server/: Cargo.toml
nullifier/spend-server/src/: pir_stub.rs  routes.rs  server.rs
nullifier/spend-server/tests/: server_test.rs  ypir_bench.rs  ypir_test.rs
nullifier/spend-types/: Cargo.toml
nullifier/spend-types/src/: lib.rs
plans/: 0_spendability_pir_redesign_fc15b175.plan.md
plans/done/: 1_reliable_ingest_components_48dc9118.plan.md  2_pir_redesign_v2_a40f05b9.plan.md  6_change_note_tracking_review_af2ca4fd.plan.md
plans/future/: 2_parallel_note_witness_scanning_e96856ee.plan.md  change_note_tracking_design_d3ecb325.plan.md  frontier_witness_update_design_1bab3c5a.plan.md  minimal_pir_scope_analysis_f8072587.plan.md
plans/wip/: decryption_pir_implementation_4a3d65f2.plan.md  pir_witness_acceleration_design_79b54db9.plan.md  witness_pir_zodl_integration_design.plan.md
proto/: compact_formats.proto  service.proto
shared/chain-ingest/: Cargo.toml
shared/chain-ingest/src/: chain_tracker.rs  client.rs  lib.rs  proto.rs
shared/pir-types/: Cargo.toml
shared/pir-types/src/: lib.rs
spend-client/: Cargo.toml
spend-client/src/: lib.rs
spend-client/tests/: end_to_end.rs  live_test.rs
spend-server/: Cargo.toml
spend-server/src/: lib.rs  main.rs  pir_stub.rs  pir_ypir.rs  routes.rs  server.rs  snapshot_io.rs  state.rs
spend-server/tests/: server_test.rs  ypir_bench.rs  ypir_test.rs
spend-types/: Cargo.toml
spend-types/src/: lib.rs
witness/: README.md
witness/commitment-ingest/: Cargo.toml
witness/commitment-ingest/src/: ingest.rs  lib.rs  parser.rs
witness/commitment-tree-db/: Cargo.toml
witness/commitment-tree-db/src/: lib.rs  snapshot.rs
witness/commitment-tree-db/tests/: tree_correctness.rs
witness/decryption-db/: Cargo.toml
witness/decryption-db/src/: lib.rs  snapshot.rs
witness/decryption-server/: Cargo.toml
witness/decryption-server/src/: pir_stub.rs  pir_ypir.rs  routes.rs  server.rs  snapshot_io.rs  state.rs
witness/decryption-types/: Cargo.toml
witness/decryption-types/src/: lib.rs
witness/witness-client/: Cargo.toml
witness/witness-client/src/: lib.rs  reconstruct.rs
witness/witness-client/tests/: e2e_mainnet.rs
witness/witness-server/: Cargo.toml
witness/witness-server/src/: lib.rs  main.rs  pir_stub.rs  pir_ypir.rs  routes.rs  server.rs  snapshot_io.rs  state.rs
witness/witness-server/tests/: pir_round_trip.rs
witness/witness-types/: Cargo.toml
witness/witness-types/src/: lib.rs
