[workspace]
resolver = "2"
members = [
    "shared/pir-types",
    "shared/chain-ingest",
    "nullifier/spend-types",
    "nullifier/hashtable-pir",
    "nullifier/nf-ingest",
    "nullifier/spend-server",
    "nullifier/spend-client",
    "witness/witness-types",
    "witness/commitment-ingest",
    "witness/commitment-tree-db",
    "witness/witness-server",
    "witness/decryption-types",
    "witness/witness-client",
    "combined-server",
]

[patch.crates-io]
valar-spiral-rs = { git = "https://github.com/valargroup/spiral-rs.git", branch = "valar/avoid-avx512" }

[profile.release]
lto = "fat"
codegen-units = 1
