[package]
name = "combined-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pir-server"
path = "src/main.rs"
required-features = ["ypir"]

[features]
default = []
ypir = ["spend-server/ypir", "witness-server/ypir"]

[dependencies]
spend-server = { path = "../nullifier/spend-server" }
witness-server = { path = "../witness/witness-server" }
spend-types = { path = "../nullifier/spend-types" }
witness-types = { path = "../witness/witness-types" }
pir-types = { path = "../shared/pir-types" }
nf-ingest = { path = "../nullifier/nf-ingest" }
commitment-ingest = { path = "../witness/commitment-ingest" }
hashtable-pir = { path = "../nullifier/hashtable-pir" }
commitment-tree-db = { path = "../witness/commitment-tree-db" }
chain-ingest = { path = "../shared/chain-ingest" }
axum = "0.7"
tokio = { version = "1", features = ["full"] }
arc-swap = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
