[package]
name = "combined-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "spend-server"
path = "src/main.rs"
required-features = ["ypir"]

[features]
default = ["nullifier", "witness"]
nullifier = [
    "dep:spend-server",
    "dep:spend-types",
    "dep:nf-ingest",
    "dep:hashtable-pir",
]
witness = [
    "dep:witness-server",
    "dep:witness-types",
    "dep:commitment-ingest",
    "dep:commitment-tree-db",
]
ypir = ["spend-server?/ypir", "witness-server?/ypir"]

[dependencies]
spend-server = { path = "../nullifier/spend-server", optional = true }
witness-server = { path = "../witness/witness-server", optional = true }
spend-types = { path = "../nullifier/spend-types", optional = true }
witness-types = { path = "../witness/witness-types", optional = true }
pir-types = { path = "../shared/pir-types" }
nf-ingest = { path = "../nullifier/nf-ingest", optional = true }
commitment-ingest = { path = "../witness/commitment-ingest", optional = true }
hashtable-pir = { path = "../nullifier/hashtable-pir", optional = true }
commitment-tree-db = { path = "../witness/commitment-tree-db", optional = true }
chain-ingest = { path = "../shared/chain-ingest" }
axum = "0.7"
tokio = { version = "1", features = ["full"] }
arc-swap = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[dev-dependencies]
ypir = { package = "valar-ypir", git = "https://github.com/valargroup/ypir.git", branch = "valar/artifact", default-features = false }
spiral-rs = { package = "valar-spiral-rs", git = "https://github.com/valargroup/spiral-rs.git", branch = "valar/avoid-avx512" }
