[package]
name = "nf-ingest"
version = "0.1.0"
edition = "2021"

[dependencies]
spend-types = { path = "../spend-types" }
tonic = "0.12"
prost = "0.13"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tracing = "0.1"
thiserror = "2"

[dev-dependencies]
hashtable-pir = { path = "../hashtable-pir" }
rand = "0.8"

[build-dependencies]
tonic-build = "0.12"
