[package]
name = "decryption-server"
version = "0.1.0"
edition = "2021"

[features]
default = []
ypir = ["dep:ypir", "dep:spiral-rs"]

[dependencies]
decryption-types = { path = "../decryption-types" }
decryption-db = { path = "../decryption-db" }
pir-types = { path = "../../shared/pir-types" }
axum = "0.7"
tokio = { version = "1", features = ["full"] }
arc-swap = "1"
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
thiserror = "2"
ypir = { git = "https://github.com/valargroup/ypir.git", branch = "valar/artifact", default-features = false, features = ["server"], optional = true }
spiral-rs = { git = "https://github.com/valargroup/spiral-rs.git", branch = "valar/avoid-avx512", optional = true }

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1"
