[package]
name = "witness-client"
version = "0.1.0"
edition = "2021"

[dependencies]
witness-types = { path = "../witness-types" }
pir-types = { path = "../../shared/pir-types" }
orchard = { version = "0.12", default-features = false }
incrementalmerkletree = "0.8"
ypir = { git = "https://github.com/valargroup/ypir.git", branch = "valar/artifact", default-features = false }
spiral-rs = { git = "https://github.com/valargroup/spiral-rs.git", branch = "valar/avoid-avx512" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "2"
tracing = "0.1"
