[package]
name = "witness-client"
version = "0.1.0"
edition = "2021"

[dependencies]
witness-types = { path = "../witness-types" }
pir-types = { path = "../../shared/pir-types" }
orchard = { version = "0.11", default-features = false }
incrementalmerkletree = "0.8"
ypir = { package = "valar-ypir", git = "https://github.com/valargroup/ypir.git", branch = "valar/artifact", default-features = false }
spiral-rs = { package = "valar-spiral-rs", git = "https://github.com/valargroup/spiral-rs.git", branch = "valar/avoid-avx512" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "2"
tracing = "0.1"

[dev-dependencies]
commitment-tree-db = { path = "../commitment-tree-db" }
commitment-ingest = { path = "../commitment-ingest" }
chain-ingest = { path = "../../shared/chain-ingest" }
witness-server = { path = "../witness-server" }
hex = "0.4"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = "0.7"
